Reverted the disabling of infer schema caused by PR-21826
Signed-off-by: expani <anijainc@amazon.com>